tests/snapshots/edit__add_input@all_blanks_flake_true.snap
---
source: tests/edit.rs
expression: result
info:
  flake_nix: ""
  changes:
    - Add:
        id: vmsh
        uri: "github:mic92/vmsh"
        flake: true
---
{
  description = "Fixture with blank lines between every input.";

  inputs = {
    nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";

    fenix = {
      url = "github:nix-community/fenix";
      inputs.nixpkgs.follows = "nixpkgs";
    };

    crane.url = "github:ipetkov/crane";
    vmsh.url = "github:mic92/vmsh";
  };

  outputs = _: { };
}
