tests/snapshots/edit__add_input@completely_flat_toplevel_flake_true.snap
---
source: tests/edit.rs
expression: result
info:
  flake_nix: ""
  changes:
    - Add:
        id: vmsh
        uri: mic92/vmsh
        flake: true
---
{
  description = "Edit your flake inputs with ease";

  inputs.nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";
  inputs.flake-utelinos.url = "github:numtide/flake-utils";
  inputs.rust-overlay.url = "github:oxalica/rust-overlay";
  inputs.rust-overlay.inputs.nixpkgs.follows = "nixpkgs";
  inputs.rust-overlay.inputs.flake-utils.follows = "flake-utils";
  inputs.crane.url = "github:ipetkov/crane";
  inputs.crane.inputs.nixpkgs.follows = "nixpkgs";
  inputs.crane.inputs.rust-overlay.follows = "rust-overlay";
  inputs.crane.inputs.flake-utils.follows = "flake-utils";
  inputs.vmsh.url = "mic92/vmsh";

  outputs = _: { };
}
