tests/snapshots/edit__add_input@empty_inputs_flake_true.snap
---
source: tests/edit.rs
expression: result
info:
  flake_nix: ""
  changes:
    - Add:
        id: vmsh
        uri: "github:mic92/vmsh"
        flake: true
---
{
  description = "A project with empty inputs";

  inputs = {
    vmsh.url = "github:mic92/vmsh";
  };

  outputs =
    { ... }:
    {
    };
}
