tests/snapshots/edit__add_input@leading_comma_outputs_flake_true.snap
---
source: tests/edit.rs
expression: result
info:
  flake_nix: ""
  changes:
    - Add:
        id: vmsh
        uri: mic92/vmsh
        flake: true
---
{
  inputs = {
    nixpkgs.url = "github:nixos/nixpkgs/nixpkgs-unstable";

    fenix = {
      url = "github:nix-community/fenix";
      inputs.nixpkgs.follows = "nixpkgs";
    };

    vmsh.url = "mic92/vmsh";
  };

  outputs =
    { self
    , nixpkgs
    , fenix
    , vmsh
    }:
    { };
}
