tests/snapshots/edit__add_input@leading_comma_trailing_comma_outputs_flake_true.snap
---
source: tests/edit.rs
expression: result
info:
  flake_nix: ""
  changes:
    - Add:
        id: vmsh
        uri: "github:mic92/vmsh"
        flake: true
---
{
  inputs = {
    nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";
    flake-utils.url = "github:numtide/flake-utils";
    vmsh.url = "github:mic92/vmsh";
  };

  outputs =
    { self
    , nixpkgs
    , flake-utils
    , vmsh
    ,
    }:
    { };
}
