tests/snapshots/edit__add_input@merged_inputs_flake_true.snap
---
source: tests/edit.rs
expression: result
info:
  flake_nix: ""
  changes:
    - Add:
        id: vmsh
        uri: "github:mic92/vmsh"
        flake: true
---
{
  description = "Flake with multiple inputs blocks (merged attrsets)";

  # Common inputs
  inputs = {
    nixpkgs.url = "github:NixOS/nixpkgs/nixos-unstable";
    home-manager = {
      url = "github:nix-community/home-manager";
      inputs.nixpkgs.follows = "nixpkgs";
    };
    vmsh.url = "github:mic92/vmsh";
  };

  # Project-specific sources
  inputs = {
    plugin-a = {
      url = "github:foo/plugin-a/v2.0";
      flake = false;
    };
    plugin-b = {
      url = "github:foo/plugin-b/v1.8.2";
      flake = false;
    };
  };

  outputs = { self, nixpkgs, home-manager, plugin-a, plugin-b, ... }: { };
}
