tests/snapshots/edit__add_input@merged_inputs_flat_flake_true.snap
---
source: tests/edit.rs
expression: result
info:
  flake_nix: ""
  changes:
    - Add:
        id: vmsh
        uri: "github:mic92/vmsh"
        flake: true
---
{
  description = "Flake with multiple flat-style inputs blocks";

  inputs = {
    nixpkgs.url = "github:NixOS/nixpkgs/nixos-unstable";
    flake-utils.url = "github:numtide/flake-utils";
    vmsh.url = "github:mic92/vmsh";
  };

  inputs = {
    extra = {
      url = "github:foo/extra";
      inputs.nixpkgs.follows = "nixpkgs";
    };
  };

  outputs = { self, nixpkgs, flake-utils, extra, ... }: { };
}
